--- a/less/core/layouts/wrappers.less
+++ b/less/core/layouts/wrappers.less
@@ -33,11 +33,8 @@ body > div[@{am-wrapper-var}] { // issue #23 https://github.com/ionlyseespots/am
 [@{am-layout-var}] {
   &[@{am-layout-var}~="frame"] {
     flex-flow: column nowrap;
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
+    height: 100%;
+    max-height: 100%;
     & > {
       header {
         align-items: flex-start;
@@ -48,6 +45,7 @@ body > div[@{am-wrapper-var}] { // issue #23 https://github.com/ionlyseespots/am
         flex-flow: row wrap;
         -webkit-overflow-scrolling: touch; // https://css-tricks.com/snippets/css/momentum-scrolling-on-ios-overflow-elements/
         overflow: auto;
+        height: 100%;
         max-height: 100%;
       }
       footer {
@@ -66,6 +64,13 @@ body > div[@{am-wrapper-var}] { // issue #23 https://github.com/ionlyseespots/am
         overflow-x: auto;
         overflow-y: hidden;
       }
+    }
+    &[@{am-layout-var}~="absolute"] {
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
     }
   }
 }
