--- a/less/core/variables.less
+++ b/less/core/variables.less
@@ -28,6 +28,9 @@
 // Nav
 @am-nav-link-padding: 1em;
 
+@am-root-header: 100%;
+@am-root-footer: 100%;
+
 // Grid
 @am-flex-width1: 8.3333%;
 @am-flex-width2: 25%;
